# CookieCutClipping

./: CMakeLists.txt  CookieCutClipping.cxx  LICENSE
Data/: InputDataset.vtp
