CMAKE_MINIMUM_REQUIRED (VERSION 2.8)

PROJECT (CookieCutClipping)

FIND_PACKAGE (VTK REQUIRED)
INCLUDE (${VTK_USE_FILE})

ADD_EXECUTABLE (${PROJECT_NAME} MACOSX_BUNDLE ${PROJECT_NAME})

IF (VTK_LIBRARIES)
  TARGET_LINK_LIBRARIES (${PROJECT_NAME} ${VTK_LIBRARIES})
ELSE ()
  TARGET_LINK_LIBRARIES (${PROJECT_NAME} vtkHybrid vtkWidgets)
ENDIF ()

